# NUMIIT

./: .gitignore  NumiIT_Flutter_Prompt_v2.md  README.md  RUN.md  TECHNICAL_REPORT.md  pubspec.yaml  run.ps1  setup.ps1
NumiIT/: .gitignore  README.md  run.py
NumiIT/backend/: README.md  alembic.ini  patch_era.py  pyproject.toml  requirements.txt
NumiIT/backend/alembic/: env.py
NumiIT/backend/app/: __init__.py  main.py
NumiIT/backend/app/api/: deps.py
NumiIT/backend/app/api/v1/: router.py
NumiIT/backend/app/api/v1/routes/: analyze_character.py  auth.py  scans.py  uploads.py  users.py
NumiIT/backend/app/core/: config.py  security.py
NumiIT/backend/app/models/: __init__.py  scan.py  user.py
NumiIT/backend/app/schemas/: __init__.py  auth.py  scan.py  user.py
NumiIT/backend/app/services/: ml_inference.py
NumiIT/frontend/: .gitignore  LIBRARY_DETAILED_REPORT.md  NumiIT_Phase1_Wireframes.html  NumiIT_WebApp (1).html  README.md  RUN.md  pubspec.yaml
NumiIT/frontend/extra/: coinrecexpage2.html
NumiIT/frontend/lib/: app.dart  main.dart
android/: gradle.properties
extra/: coinrecexpage1.html  coinrecexpage3.html
ios/Runner/: Info.plist
lib/: app.dart  main.dart
lib/core/constants/: app_colors.dart  app_typography.dart
lib/core/data/: encyclopedia_data.dart
lib/core/database/: db_helper.dart  (+1 more)
lib/l10n/: app_gu.arb  app_hi.arb  app_localizations_gu.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: main.cpp
(+120 files in other folders)
